manifest/objects/Five9__Five9AdminWS_del__c.object
<CustomObject>
    <fields>
        <fullName>Five9__Password__c</fullName>
        <description>Five9 Admin Web Service password</description>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__ReportEmail__c</fullName>
        <label>ReportEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Five9__URL__c</fullName>
        <description>Five9 Admin Web Service URL</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9__Username__c</fullName>
        <description>Five9 Admin Web Service username</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Five9AdminWS</label>
    <listViews>
        <fullName>Five9__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Five9AdminWS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Five9AdminWS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>